IFS: Prevent division by zero...

...when the BRect passed to the constructor is not valid.
Should fix ticket #10832. Untested.